--- a/custom_components/mastertherm/translations/en.json
+++ b/custom_components/mastertherm/translations/en.json
@@ -3,11 +3,9 @@
         "step": {
             "user": {
                 "title": "Cloud Service Login",
-                "description": "Login to the Mastertherm cloud service select the site you log in to if pre 2022 then it is likely to be mastertherm.vip-it.cz and post 2022 mastertherm.online.",
+                "description": "Login to the Mastertherm cloud service, select the site you log in to: if pre 2022 then it is likely to be mastertherm.vip-it.cz; if post 2022 mastertherm.online.",
                 "data": {
-                    "api_verson": "Login Site",
-                    "username": "Username1",
-                    "password": "Password"
+                    "api_verson": "Login Website"
                 }
             }
         },
@@ -20,9 +18,9 @@
     "options": {
         "step": {
             "user": {
-                "description": "Test",
+                "description": "The new mastertherm servers 'mastertherm.online' can lock out with too many requests. If you have multiple more than 2 devices attached to your username, consider 10 min refresh rate or higher. (Limits not fully tested)",
                 "data": {
-                    "scan_interval": "Scan Interval in minutes"
+                    "scan_interval": "Scan interval in minutes"
                 }
             }
         }
