--- a/custom_components/mastertherm/translations/en.json
+++ b/custom_components/mastertherm/translations/en.json
@@ -5,7 +5,9 @@
                 "title": "Cloud Service Login",
                 "description": "Login to the Mastertherm cloud service, select the site you log in to: if pre 2022 then it is likely to be mastertherm.vip-it.cz; if post 2022 mastertherm.online.",
                 "data": {
-                    "api_verson": "Login Website"
+                    "api_verson": "Login Website",
+                    "username": "[%key:common::config_flow::data::username%]",
+                    "password": "[%key:common::config_flow::data::password%]"
                 }
             }
         },
