--- a/custom_components/mastertherm/translations/en.json
+++ b/custom_components/mastertherm/translations/en.json
@@ -6,8 +6,8 @@
                 "description": "Login to the Mastertherm cloud service, select the site you log in to: if pre 2022 then it is likely to be mastertherm.vip-it.cz; if post 2022 mastertherm.online.",
                 "data": {
                     "api_verson": "Login Website",
-                    "username": "[%key:common::config_flow::data::username%]",
-                    "password": "[%key:common::config_flow::data::password%]"
+                    "username": "username",
+                    "password": "password"
                 }
             }
         },
@@ -15,6 +15,9 @@
             "authentication_error": "Username/ Password is incorrect.",
             "connection_error": "Error connecting to the Mastertherm servers.",
             "unsupported_role": "Error System Role is not suppored by this integration."
+        },
+        "abort": {
+            "single_instance_allowed": "Only a single instance is allowed."
         }
     },
     "options": {
