--- a/custom_components/mastertherm/translations/sensor.en.json
+++ b/custom_components/mastertherm/translations/sensor.en.json
@@ -1,1 +1,15 @@
-{}
+{
+    "state": {
+        "_": {
+            "winter": "Winter",
+            "summer": "Summer",
+            "auto:winter": "Winter (Auto)",
+            "auto:summer": "Summer (Auto)",
+            "heating": "Heating",
+            "cooling": "Cooling",
+            "pool": "Pool",
+            "dhw": "Hot Water",
+            "dpc": "Defrost Protection"
+        }
+    }
+}
