Add Translations for Sensor Entities Fixes #2

--- a/custom_components/mastertherm/translations/sensor.en.json
+++ b/custom_components/mastertherm/translations/sensor.en.json
@@ -5,6 +5,7 @@
             "summer": "Summer",
             "auto:winter": "Winter (Auto)",
             "auto:summer": "Summer (Auto)",
+            "auto": "Auto",
             "heating": "Heating",
             "cooling": "Cooling",
             "pool": "Pool",
