Cooling Hardware Check & Translation Update

--- a/custom_components/mastertherm/translations/select.en.json
+++ b/custom_components/mastertherm/translations/select.en.json
@@ -1,6 +1,6 @@
 {
     "state": {
-        "_": {
+        "hp_function": {
             "auto": "Auto",
             "heating": "Heating",
             "cooling": "Cooling"
