--- a/custom_components/mastertherm/translations/sensor.en.json
+++ b/custom_components/mastertherm/translations/sensor.en.json
@@ -1,6 +1,6 @@
 {
     "state": {
-        "_": {
+        "hp_season": {
             "winter": "Winter",
             "summer": "Summer",
             "auto:winter": "Winter (Auto)",
