--- a/custom_components/mastertherm/translations/select.en.json
+++ b/custom_components/mastertherm/translations/select.en.json
@@ -5,5 +5,12 @@
             "heating": "Heating",
             "cooling": "Cooling"
         }
+    },
+    "hp_function": {
+        "options": {
+            "auto": "Auto",
+            "heating": "Heating",
+            "cooling": "Cooling"
+        }
     }
 }
