Update Select Translation

--- a/custom_components/mastertherm/translations/en.json
+++ b/custom_components/mastertherm/translations/en.json
@@ -29,5 +29,14 @@
                 }
             }
         }
+    },
+    "entity": {
+        "select": {
+            "hp_function": {
+                "auto": "Auto",
+                "heating": "Heating",
+                "cooling": "Cooling"
+            }
+        }
     }
 }
