--- a/custom_components/mastertherm/translations/en.json
+++ b/custom_components/mastertherm/translations/en.json
@@ -39,6 +39,21 @@
                     "cooling": "Cooling"
                 }
             }
+        },
+        "sensor": {
+            "hp_season": {
+                "state": {
+                    "winter": "Winter",
+                    "summer": "Summer",
+                    "auto:winter": "Winter (Auto)",
+                    "auto:summer": "Summer (Auto)",
+                    "heating": "Heating",
+                    "cooling": "Cooling",
+                    "pool": "Pool",
+                    "dhw": "Hot Water",
+                    "dpc": "Defrost Protection"
+                }
+            }
         }
     }
 }
