Add Periodic Full Data Reload and Refresh Fixes #93

--- a/custom_components/mastertherm/translations/en.json
+++ b/custom_components/mastertherm/translations/en.json
@@ -34,7 +34,9 @@
             "user": {
                 "description": "The new mastertherm servers 'mastertherm.online' can lock out with too many requests. If you have multiple more than 2 devices attached to your username, consider 600 seconds refresh rate or higher. (Limits not fully tested). 30 seconds on single unit has been tested.",
                 "data": {
-                    "scan_interval": "Scan interval in seconds"
+                    "scan_interval": "Seconds between data refresh requests (min: 30)",
+                    "full_refresh_interval": "Minutes between full data refresh (min: 5, max: 360)",
+                    "data_refresh_offset": "Offset last data update time in seconds (min: 0, max: 30)"
                 }
             }
         }
