Fix Dew Point Control Translation

--- a/custom_components/mastertherm/translations/en.json
+++ b/custom_components/mastertherm/translations/en.json
@@ -85,7 +85,7 @@
                     "cooling": "Cooling",
                     "pool": "Pool",
                     "dhw": "Hot Water",
-                    "dpc": "Defrost Protection",
+                    "dpc": "Dew Point Control",
                     "idle": "Idle",
                     "aux_heater": "Aux Heater"
                 }
